--- a/src/FXML/dificilfx.fxml
+++ b/src/FXML/dificilfx.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FacilfxController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.DificilfxController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -198,8 +198,6 @@
                   <TextFlow prefHeight="300.0" prefWidth="319.0" />
                </content>
             </ScrollPane>
-            <Button layoutX="391.0" layoutY="347.0" mnemonicParsing="false" text="Ayuda" />
-            <Button layoutX="660.0" layoutY="347.0" mnemonicParsing="false" text="Validar" />
       </children>
     </AnchorPane>
   </children>
