--- a/src/com/crucigramax/fxml/iniciofx.fxml
+++ b/src/com/crucigramax/fxml/iniciofx.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.IniciofxController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.IniciofxController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -39,7 +39,7 @@
                   <Font name="Britannic Bold" size="65.0" />
                </font>
             </Text>
-            <Button layoutX="14.0" layoutY="139.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="233.0" text="Nuevo Juego">
+            <Button layoutX="14.0" layoutY="139.0" mnemonicParsing="false" onAction="#abrirNiveles" prefHeight="71.0" prefWidth="233.0" text="Nuevo Juego">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
