--- a/src/com/crucigramax/fxml/nivelesfx.fxml
+++ b/src/com/crucigramax/fxml/nivelesfx.fxml
@@ -39,17 +39,17 @@
                   <Font name="Britannic Bold" size="50.0" />
                </font>
             </Text>
-            <Button layoutX="100.0" layoutY="124.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="233.0" text="FÁCIL">
+            <Button fx:id="facil" layoutX="100.0" layoutY="124.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="FÁCIL">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
-            <Button layoutX="100.0" layoutY="205.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="233.0" text="MEDIO">
+            <Button fx:id="medio" layoutX="100.0" layoutY="205.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="MEDIO">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
-            <Button layoutX="100.0" layoutY="288.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="233.0" text="DIFÍCIL">
+            <Button fx:id="dificil" layoutX="100.0" layoutY="288.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="DIFÍCIL">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
