--- a/src/com/crucigramax/view/facilfx.fxml
+++ b/src/com/crucigramax/view/facilfx.fxml
@@ -14,6 +14,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.FacilfxController">
@@ -200,6 +202,11 @@
             </ScrollPane>
             <Button layoutX="391.0" layoutY="347.0" mnemonicParsing="false" text="Ayuda" />
             <Button layoutX="660.0" layoutY="347.0" mnemonicParsing="false" text="Validar" />
+            <Text layoutX="40.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FÁCIL">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Text>
       </children>
     </AnchorPane>
   </children>
