--- a/src/com/crucigramax/view/mediofx.fxml
+++ b/src/com/crucigramax/view/mediofx.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -14,6 +13,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.MediofxController">
@@ -198,6 +199,11 @@
                   <TextFlow prefHeight="300.0" prefWidth="319.0" />
                </content>
             </ScrollPane>
+            <Text layoutX="40.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MEDIO">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Text>
       </children>
     </AnchorPane>
   </children>
