Se implementan los métodos para generar ayudas en los niveles fácil y medio. En el nivel "fácil" se entregarán de forma aleatoria 20 letras al iniciar la partida, y además cada que se haga click en el botón "ayuda" se entregará una letra aleatoria de las que aún falten. En la dificultad "media" se empieza con el tablero en blanco, pero se incluye el botón de ayuda con la misma funcionalidad. Se documentan métodos. Se corrige clase "Score" y sus métodos asociados para que se calculen con las ayudas. Se agrega documentación.

--- a/src/com/crucigramax/view/facilfx.fxml
+++ b/src/com/crucigramax/view/facilfx.fxml
@@ -702,7 +702,7 @@
                         <Font name="Britannic Bold" size="16.0" />
                     </font>
                 </Button>
-            <Button alignment="CENTER" layoutX="469.0" layoutY="508.0" mnemonicParsing="false" text="AYUDA" AnchorPane.bottomAnchor="38.0">
+            <Button alignment="CENTER" layoutX="469.0" layoutY="508.0" mnemonicParsing="false" onMouseClicked="#ayuda" text="AYUDA" AnchorPane.bottomAnchor="38.0">
                <font>
                   <Font name="Britannic Bold" size="16.0" />
                </font>
