Se corriguen algunas funciones, además de agregar interactividad algunos botones, mostrar información en el submenu de Aerca De... y demás funciones. También se terminó de documentar cada una de las clases y generar el Javadoc, por último se agrega la ventana de Puntajes Maximos.

--- a/src/com/crucigramax/view/dificilfx.fxml
+++ b/src/com/crucigramax/view/dificilfx.fxml
@@ -23,18 +23,16 @@
             <menus>
                 <Menu mnemonicParsing="false" text="Archivo">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Nuevo Juego" />
+                        <MenuItem mnemonicParsing="false" text="Nuevo Juego" onAction="#nuevoJuego"/>
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="Cerrar" />
-                        <MenuItem mnemonicParsing="false" text="Deshacer" />
+                        <MenuItem mnemonicParsing="false" text="Cerrar" onAction="#cerrar"/>
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="Salir" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Ayuda">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Acerca De..." />
+                        <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" text="Acerca De..." />
                     </items>
                 </Menu>
             </menus>
