--- a/src/com/crucigramax/view/iniciofx.fxml
+++ b/src/com/crucigramax/view/iniciofx.fxml
@@ -16,18 +16,14 @@
       <menus>
         <Menu mnemonicParsing="false" text="Archivo">
           <items>
-            <MenuItem mnemonicParsing="false" text="Nuevo Juego" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cerrar" />
-            <MenuItem mnemonicParsing="false" text="Deshacer" />
+            <MenuItem mnemonicParsing="false" text="Cerrar" onAction="#cerrar"/>
             <SeparatorMenuItem mnemonicParsing="false" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Salir" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Ayuda">
           <items>
-            <MenuItem mnemonicParsing="false" text="Acerca De..." />
+            <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" text="Acerca De..." />
           </items>
         </Menu>
       </menus>
@@ -44,7 +40,7 @@
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
-            <Button layoutX="14.0" layoutY="236.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="233.0" text="Puntajes Máximos">
+            <Button layoutX="14.0" layoutY="236.0" mnemonicParsing="false" onAction="#mostrarPuntajesMaximos" prefHeight="71.0" prefWidth="233.0" text="Puntajes Máximos">
                <font>
                   <Font name="Britannic Bold" size="23.0" />
                </font>
