--- a/src/com/crucigramax/view/nivelesfx.fxml
+++ b/src/com/crucigramax/view/nivelesfx.fxml
@@ -16,18 +16,13 @@
       <menus>
         <Menu mnemonicParsing="false" text="Archivo">
           <items>
-            <MenuItem mnemonicParsing="false" text="Nuevo Juego" />
+            <MenuItem mnemonicParsing="false" text="Cerrar" onAction="#cerrar"/>
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cerrar" />
-            <MenuItem mnemonicParsing="false" text="Deshacer" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Salir" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Ayuda">
           <items>
-            <MenuItem mnemonicParsing="false" text="Acerca De..." />
+            <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" text="Acerca De..." />
           </items>
         </Menu>
       </menus>
@@ -54,6 +49,7 @@
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
+            <Button layoutX="150.0" layoutY="370.0" mnemonicParsing="false" onAction="#volverAInicio" prefHeight="40.0" prefWidth="133.0" text="Volver" />
          </children>
     </AnchorPane>
   </children>
