Se crea método para mostrar el acerca de (ayuda) en la clase App, se agregan atributos a los textField cuando son agregados por ayudas o se validan de forma correcta para que no se puedan editar. Se agrega atributo non transversable para los recuadros negros y las letras validadas para que al hacer TAB los omita. Se corrige descripción de los acerca De en los niveles. Se modifica la tabla de puntajes máximos para que solo muestre los 10 más altos, y llene toda la ventana.

--- a/src/com/crucigramax/view/iniciofx.fxml
+++ b/src/com/crucigramax/view/iniciofx.fxml
@@ -16,14 +16,14 @@
       <menus>
         <Menu mnemonicParsing="false" text="Archivo">
           <items>
-            <MenuItem mnemonicParsing="false" text="Cerrar" onAction="#cerrar"/>
+            <MenuItem mnemonicParsing="false" onAction="#cerrar" text="Cerrar" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <SeparatorMenuItem mnemonicParsing="false" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Ayuda">
           <items>
-            <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" text="Acerca De..." />
+            <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" onAction="#acercaDe" text="Acerca De..." />
           </items>
         </Menu>
       </menus>
