--- a/src/com/crucigramax/view/PuntajesMaximos.fxml
+++ b/src/com/crucigramax/view/PuntajesMaximos.fxml
@@ -1,29 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.PuntajesMaximosController" alignment="CENTER">
+<VBox alignment="CENTER" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.PuntajesMaximosController">
     <children>
-        <Label text="Puntajes Máximos" style="-fx-font-size: 18px; -fx-font-weight: bold;" VBox.vgrow="NEVER">
-            <VBox.margin>
-                <javafx.geometry.Insets top="10" bottom="10"/>
-            </VBox.margin>
-        </Label>
-        <ScrollPane VBox.vgrow="ALWAYS" fitToWidth="true">
-            <content>
-                <TableView fx:id="tablaPuntajes" prefWidth="600.0" prefHeight="400.0">
-                    <columns>
-                        <TableColumn fx:id="colNickname" text="Nickname" />
-                        <TableColumn fx:id="colPuntaje" text="Puntaje" />
-                    </columns>
-                </TableView>
-            </content>
-        </ScrollPane>
-        <Button text="Volver" onAction="#volverAInicio" />
+      <MenuBar>
+         <menus>
+            <Menu mnemonicParsing="false" text="Archivo">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#cerrar" text="Cerrar" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Ayuda">
+               <items>
+                  <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" onAction="#acercaDe" text="Acerca de" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <AnchorPane prefHeight="425.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+         <children>
+            <Text layoutX="188.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Puntajes Máximos" textAlignment="CENTER" AnchorPane.topAnchor="13.662109375">
+               <font>
+                  <Font name="Britannic Bold" size="28.0" />
+               </font>
+            </Text>
+            <TableView fx:id="tablaPuntajes" layoutX="1.0" layoutY="54.0" prefHeight="194.0" prefWidth="600.0" AnchorPane.bottomAnchor="177.33333333333331" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="54.0">
+               <columns>
+                  <TableColumn fx:id="colNickname" prefWidth="298.0000001192093" text="Nickname" />
+                  <TableColumn fx:id="colPuntaje" prefWidth="300.0" text="Puntaje" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </TableView>
+              <Button layoutX="259.0" layoutY="407.0" onAction="#volverAInicio" text="Volver" AnchorPane.bottomAnchor="7.666666666666686" AnchorPane.leftAnchor="259.0" AnchorPane.rightAnchor="259.33333333333337">
+               <font>
+                  <Font name="Britannic Bold" size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
     </children>
 </VBox>
