--- a/src/com/crucigramax/view/facilfx.fxml
+++ b/src/com/crucigramax/view/facilfx.fxml
@@ -23,16 +23,16 @@
             <menus>
                 <Menu mnemonicParsing="false" text="Archivo">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Nuevo Juego" onAction="#nuevoJuego"/>
+                        <MenuItem mnemonicParsing="false" onAction="#nuevoJuego" text="Nuevo Juego" />
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="Cerrar" onAction="#cerrar"/>
+                        <MenuItem mnemonicParsing="false" onAction="#cerrar" text="Cerrar" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Ayuda">
                     <items>
-                         <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" text="Acerca De..." />
+                         <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" onAction="#acercaDe" text="Acerca De..." />
                     </items>
                 </Menu>
             </menus>
