--- a/src/com/crucigramax/view/nivelesfx.fxml
+++ b/src/com/crucigramax/view/nivelesfx.fxml
@@ -10,19 +10,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="433.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.NivelesfxController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="487.0" prefWidth="431.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crucigramax.controllers.NivelesfxController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="Archivo">
           <items>
-            <MenuItem mnemonicParsing="false" text="Cerrar" onAction="#cerrar"/>
+            <MenuItem mnemonicParsing="false" onAction="#cerrar" text="Cerrar" />
             <SeparatorMenuItem mnemonicParsing="false" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Ayuda">
           <items>
-            <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" text="Acerca De..." />
+            <MenuItem fx:id="menuItemAcercaDe" mnemonicParsing="false" onAction="#acercaDe" text="Acerca De..." />
           </items>
         </Menu>
       </menus>
@@ -34,22 +34,25 @@
                   <Font name="Britannic Bold" size="50.0" />
                </font>
             </Text>
-            <Button fx:id="facil" layoutX="100.0" layoutY="124.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="FÁCIL">
+            <Button fx:id="facil" layoutX="99.0" layoutY="104.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="FÁCIL">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
-            <Button fx:id="medio" layoutX="100.0" layoutY="205.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="MEDIO">
+            <Button fx:id="medio" layoutX="99.0" layoutY="185.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="MEDIO">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
-            <Button fx:id="dificil" layoutX="100.0" layoutY="288.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="DIFÍCIL">
+            <Button fx:id="dificil" layoutX="100.0" layoutY="266.0" mnemonicParsing="false" onAction="#manejarClick" prefHeight="71.0" prefWidth="233.0" text="DIFÍCIL">
                <font>
                   <Font name="Britannic Bold" size="30.0" />
                </font>
             </Button>
-            <Button layoutX="150.0" layoutY="370.0" mnemonicParsing="false" onAction="#volverAInicio" prefHeight="40.0" prefWidth="133.0" text="Volver" />
+            <Button layoutX="100.0" layoutY="346.0" mnemonicParsing="false" onAction="#volverAInicio" prefHeight="71.0" prefWidth="233.0" text="VOLVER">
+               <font>
+                  <Font name="Britannic Bold" size="30.0" />
+               </font></Button>
          </children>
     </AnchorPane>
   </children>
